[Enhancement][Sean] Redesigned drops page and modals
